# LexSort-Vera-Personal-AI

./: .gitignore  LAUNCH_DAY_CHECKLIST.md  LICENSE  README.md  TESTER_SETUP.md  netlify.toml  todo-marketing.md
.github/ISSUE_TEMPLATE/: config.yml  installation_issue.yml
.github/workflows/: release.yml
discord-bot/: .env.example  package.json  tester-manager.js
lexsort-personal-ai/: README.md  package-lock.json  package.json
lexsort-personal-ai/resources/: llama-server-aarch64-apple-darwin
lexsort-personal-ai/sidecar/: index.js  package.json
lexsort-personal-ai/src/: App.tsx  SupportPanel.css  SupportPanel.tsx  app.css
lexsort-personal-ai/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
lexsort-personal-ai/src-tauri/capabilities/: default.json
lexsort-personal-ai/src-tauri/icons/: icon.icns
lexsort-personal-ai/src-tauri/src/: lib.rs  main.rs
netlify/functions/: create-tester-checkout.js  download-attempt.js  feedback.js  get-download-count.js  github-webhook.js  package-lock.json  package.json  retrieve-license-key.js  stripe-webhook.js  uptime-monitor.js  verify-tester-status.js
scripts/: generate-test-keys.js  setup-stripe-resources.js
sidecar/: index.js  package-lock.json
sidecar/modules/: conversation-store.js  hardware-profiler.js  ollama-manager.js  quantization-selector.js
src/: App.jsx  app.css
src/components/: SettingsPanel.jsx
website/: download.html  faq.html  freeware.html  index.html  indexold.html  partner.html  privacy.html  pro-activated.html  robots.txt  tos.html  vera-pro.html  vera.html
(+10 files in other folders)
