[package]
name = "VERA"
version = "1.0.0"
description = "LexSort Personal AI — Private Local Chat"
authors = ["William Commu / Just Me Media"]
edition = "2021"

[lib]
name = "lexsort_personal_ai_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-shell  = "2"
tauri-plugin-opener = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
sysinfo        = "0.30"
reqwest        = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
sha2           = "0.10"
tokio          = { version = "1", features = ["full"] }
futures-util   = "0.3"
hex            = "0.4"
